# rust-pico-usb-console

./: Cargo.toml  README.md  build.rs  cargo-generate.toml  cargo_build_errors.txt  embassy-rp2040-usb-guia.md  flash.sh  memory.x
.cargo/: config.toml
src/: main.rs
